--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content=UVMOD - Online Quansheng Firmware Patcher>
-  <meta property="og:site_name" content=UVMOD>
+  <meta property="og:title" content=UVMOD RX-TX - Online Quansheng Firmware Patcher>
+  <meta property="og:site_name" content=UVMOD RX-TX>
   <meta property="og:url" content=https://re3con.github.io/uvmod />
   <meta property="og:description"
     content="Web-based tool to generate customizable modded firmware for various Quansheng handheld radios.">
   <meta property="og:type" content=website>
   <meta property="og:image" content=https://re3con.github.io/uvmod/img/banner.webp>
 
-  <title>UVMOD</title>
+  <title>UVMOD RX-TX</title>
 
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   <!-- Custom fonts for this template-->
@@ -135,8 +135,8 @@
                 </div>
                 <div class="card-body">
                   <h2 class="mb-4">UVMOD RX-TX</h2>
-                  <p>This tool lets you create customized firmware for the Quansheng UV-K5, UV-K6, UV-K5(8), and UV-5R
-                    Plus handheld radios. To flash the firmware, you need a compatible programming cable and the
+                  <p>This tool lets you create customized firmware Version 2.01.26 for the Quansheng UV-K5, UV-K6, UV-K5(8), and UV-5R
+                    Plus handheld radios. It spoof the version number to work on all. To flash the firmware, you need a compatible programming cable and the
                     necessary drivers.</p>
 
                   <h3 class="mt-4">Usage</h3>
