--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content=UVMOD RX-TX - Online Quansheng Firmware Patcher>
-  <meta property="og:site_name" content=UVMOD RX-TX>
-  <meta property="og:url" content=https://re3con.github.io/uvmod/>
+  <meta property="og:title" content="UVMOD RX-TX - Online Quansheng Firmware Patcher">
+  <meta property="og:site_name" content="UVMOD RX-TX">
+  <meta property="og:url" content="https://re3con.github.io/uvmod/">
   <meta property="og:description"
     content="Web-based tool to generate customizable modded firmware for various Quansheng handheld radios.">
-  <meta property="og:type" content=website>
-  <meta property="og:image" content=https://re3con.github.io/uvmod/img/banner.webp>
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://re3con.github.io/uvmod/img/banner.webp">
 
   <title>UVMOD RX-TX</title>
 
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://re3con.github.io/uvmod/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="196x196" href="https://re3con.github.io/uvmod/img/favicon.png">
+  <link rel="shortcut icon" href="https://re3con.github.io/uvmod/img/favicon.ico">
   <!-- Custom fonts for this template-->
   <link href="fonts/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="fonts/nunito.css" rel="stylesheet">
