--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <title>UVMOD RX-TX</title>
 
-  <link rel="icon" type="image/x-icon" href="https://re3con.github.io/uvmod/img/favicon.ico">
+<!--  <link rel="icon" type="image/x-icon" href="https://re3con.github.io/uvmod/img/favicon.ico"> -->
   <link rel="icon" type="image/png" sizes="196x196" href="https://re3con.github.io/uvmod/img/favicon.png">
   <link rel="shortcut icon" href="https://re3con.github.io/uvmod/img/favicon.ico">
   <!-- Custom fonts for this template-->
