--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <!--  <link rel="icon" type="image/x-icon" href="https://re3con.github.io/uvmod/img/favicon.ico"> -->
   <link rel="icon" type="image/png" sizes="196x196" href="https://re3con.github.io/uvmod/img/favicon.png">
   <link rel="shortcut icon" href="https://re3con.github.io/uvmod/img/favicon.ico">
+  <meta name="geo.region" content="TH-90" />
+  <meta name="geo.placename" content="Hat Yai" />
+  <meta name="geo.position" content="7.021532;100.502854" />
+  <meta name="ICBM" content="7.021532, 100.502854" />
   <!-- Custom fonts for this template-->
   <link href="fonts/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="fonts/nunito.css" rel="stylesheet">
