--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                       become available.</li>
                     <li>Click update and wait for the tool to finish.</li>
                     <li>All done, all your settings should still all be intact.</li>
+                    <li>Check your local laws. In some countries you need a HAM license and/or a wave radiation safe room next to a dummyload on some frequencies before testing TX.<li>
                   </ol>
                 </div>
 
