--- a/index.html
+++ b/index.html
@@ -172,8 +172,12 @@
                       become available.</li>
                     <li>Click update and wait for the tool to finish.</li>
                     <li>All done, all your settings should still all be intact.</li>
-                    <li>Check your local laws. In some countries you need a HAM license and/or a wave radiation safe room next to a dummyload on some frequencies before testing TX.<li>
                   </ol>
+                  <h3 class="mt-4">Warning</h3>
+                  <p>Check your local laws.</p>
+                  <ol>
+                   <li>In some countries you need a HAM license and/or a wave radiation safe room next to a dummyload on some frequencies before testing TX.</li>
+                   </ol>   
                 </div>
 
               </div>
