--- a/index.html
+++ b/index.html
@@ -174,10 +174,9 @@
                     <li>All done, all your settings should still all be intact.</li>
                   </ol>
                   <h3 class="mt-4">Warning</h3>
-                  <p>Check your local laws.</p>
-                  <ol>
-                   <li>In some countries you need a HAM license and/or a wave radiation safe room next to a dummyload on some frequencies before testing TX.</li>
-                   </ol>   
+                  <p>Check your local laws.
+                     In some countries you need a HAM license and/or a wave radiation safe room or a Dummyload (50 Ohm, 5W) on some frequencies before testing TX.
+                  73, 55 R3CøN</p> 
                 </div>
 
               </div>
