--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <li>All done, all your settings should still all be intact.</li>
                   </ol>
                   <h3 class="mt-4">Warning</h3>
-                  <p><b>Check your local laws!<b/><br/>
+                  <p><b>Check your local laws!</b><br/>
                      In some countries you need a HAM license to operate and/or a wave radiation safe room.<br/> 
                      Use a Dummyload (50 Ohm, 5W) on some frequencies for testing TX before going On-Air.<br/>
                      <i>73, 55 R3CøN</i></p> 
