--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="ICBM" content="7.021532, 100.502854">
   <!-- Custom fonts for this template-->
   <link href="fonts/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="fonts/nunito.css" rel="stylesheet">
+  <link href="fonts/nunito-min.css" rel="stylesheet">
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
