--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="UVMOD RX-TX - Online Quansheng Firmware Patcher">
   <meta property="og:site_name" content="UVMOD RX-TX">
-  <meta property="og:url" content="https://re3con.github.io/uvmod/">
+  <meta property="og:url" content="http://recon.ddns.net/">
   <meta property="og:description"
     content="Web-based tool to generate customizable modded firmware for various Quansheng handheld radios.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://re3con.github.io/uvmod/img/banner.webp">
+  <meta property="og:image" content="/img/banner.webp">
 
   <title>UVMOD RX-TX</title>
 
-<!--  <link rel="icon" type="image/x-icon" href="https://re3con.github.io/uvmod/img/favicon.ico"> -->
-  <link rel="icon" type="image/png" sizes="196x196" href="https://re3con.github.io/uvmod/img/favicon.png">
-  <link rel="shortcut icon" href="https://re3con.github.io/uvmod/img/favicon.ico">
+<!--  <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
+  <link rel="icon" type="image/png" sizes="196x196" href="/img/favicon.png">
+  <link rel="shortcut icon" href="/img/favicon.ico">
   <meta name="geo.region" content="TH-90">
   <meta name="geo.placename" content="Hat Yai">
   <meta name="geo.position" content="7.021532;100.502854">
