--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <meta property="og:description"
     content="Web-based tool to generate customizable modded firmware for various Quansheng handheld radios.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="/img/banner.webp">
+  <meta property="og:image" content="img/banner.webp">
 
   <title>UVMOD RX-TX</title>
 
 <!--  <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
-  <link rel="icon" type="image/png" sizes="196x196" href="/img/favicon.png">
-  <link rel="shortcut icon" href="/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="196x196" href="img/favicon.png">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="geo.region" content="TH-90">
   <meta name="geo.placename" content="Hat Yai">
   <meta name="geo.position" content="7.021532;100.502854">
