--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="keywords" content="Quansheng, UV, UV-K5, UV-K6, UV-5R, Firmware, Patch, Mod, Mods, Hack">
   <meta property="og:title" content="UVMOD RX-TX - Online Quansheng Firmware Patcher">
   <meta property="og:site_name" content="UVMOD RX-TX">
-  <meta property="og:url" content="http://recon.ddns.net/">
+  <meta property="og:url" content="https://recon.ddns.net/">
   <meta property="og:description"
-    content="Web-based tool to generate customizable modded firmware for various Quansheng handheld radios.">
+    content="Web-based tool to patch and generate customizable modded firmware for Quansheng UV series walkie talkie, handheld radios.">
+  <meta name="description" content="Quansheng UV Online Firmware patcher">
   <meta property="og:type" content="website">
   <meta property="og:image" content="img/banner.webp">
 
@@ -22,6 +24,7 @@
   <meta name="geo.placename" content="Hat Yai">
   <meta name="geo.position" content="7.021532;100.502854">
   <meta name="ICBM" content="7.021532, 100.502854">
+  <meta name="author" content="RECON re3con">
   <!-- Custom fonts for this template-->
   <link href="fonts/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="fonts/nunito-min.css" rel="stylesheet">
