--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="keywords" content="Quansheng, UV, UV-K5, UV-K6, UV-5R, Firmware, Patch, Mod, Mods, Hack">
+  <meta name="keywords" content="Quansheng, UV, UV-K5, UV-K6, UV-5R, custom, Firmware, Patch, Mod, Mods, Hack, Generator">
   <meta property="og:title" content="UVMOD RX-TX - Online Quansheng Firmware Patcher">
   <meta property="og:site_name" content="UVMOD RX-TX">
   <meta property="og:url" content="https://recon.ddns.net/">
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="img/banner.webp">
 
-  <title>UVMOD RX-TX</title>
+  <title>UVMOD RX-TX custom Firmware Generator</title>
 
 <!--  <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
   <link rel="icon" type="image/png" sizes="196x196" href="img/favicon.png">
