--- a/404.html
+++ b/404.html
@@ -4,7 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="7; url='https://recon.ddns.net'" />
+    <meta http-equiv="refresh" content="7; url='https://recon.ddns.net'">
+    <meta name="author" content="RECON re3con">
+    <meta name="publisher" content="admin@leechermods.com">
+    <meta name="copyright" content="RECON">
+    <meta name="description" content="UV Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
+    <meta name="keywords" content="quansheng, uv-k5, us-k6, uv-5r, plus, firmware, mod, mods, modification, generator, patch, tool, uvmod">
+    <meta name="page-topic" content="Research technical education HAM radio">
+    <meta name="page-type" content="Software Download">
+    <meta name="audience" content="all">
+    <meta http-equiv="content-language" content="en">
+    <meta name="robots" content="index, follow">
+    <meta name="DC.Creator" content="RECON re3con">
+    <meta name="DC.Publisher" content="admin@leechermods.com">
+    <meta name="DC.Rights" content="RECON">
+    <meta name="DC.Description" content="UV Mod is an online custom firmware mods generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
+    <meta name="DC.Language" content="en">
+
     <title>Redirecting</title>
   </head>
   <body onload="redirect()">
