--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
   <meta property="og:site_name" content="UVMOD RX-TX">
   <meta property="og:url" content="https://recon.ddns.net/">
   <meta property="og:description"
-    content="Web-based tool to patch and generate customizable modded firmware for Quansheng UV series walkie talkie, handheld radios.">
+    content="Online patcher generates customizable modded firmware for Quansheng UV series walkie talkies, handheld HAM radios.">
   <meta name="description" content="Quansheng UV Online Firmware patcher">
   <meta property="og:type" content="website">
   <meta property="og:image" content="img/banner.webp">
+  <meta name="author" content="RECON re3con">
+  <meta name="publisher" content="admin@leechermods.com">
+  <meta name="copyright" content="RECON">
+  <meta name="description" content="UV Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
+  <meta name="keywords" content="quansheng, uv-k5, us-k6, uv-5r, plus, firmware, mod, mods, modification, generator, patch, tool, uvmod">
+  <meta name="page-topic" content="Technical Research HAM Radio Firmware">
+  <meta name="page-type" content="Software Download">
+  <meta name="audience" content="All">
+  <meta http-equiv="content-language" content="en">
+  <meta name="robots" content="index, follow">
+  <meta name="DC.Creator" content="RECON re3con">
+  <meta name="DC.Publisher" content="admin@leechermods.com">
+  <meta name="DC.Rights" content="RECON">
+  <meta name="DC.Description" content="UV Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
+  <meta name="DC.Language" content="en">
 
   <title>UVMOD RX-TX custom Firmware Generator</title>
 
