--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="keywords" content="quansheng, uv-k5, us-k6, uv-5r, plus, firmware, mod, mods, modification, generator, patch, tool, uvmod">
   <meta name="page-topic" content="Technical Research HAM Radio Firmware">
   <meta name="page-type" content="Software Download">
-  <meta name="audience" content="All">
+  <meta name="audience" content="all">
   <meta http-equiv="content-language" content="en">
   <meta name="robots" content="index, follow">
   <meta name="DC.Creator" content="RECON re3con">
@@ -29,7 +29,7 @@
   <meta name="DC.Rights" content="RECON">
   <meta name="DC.Description" content="UV Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
   <meta name="DC.Language" content="en">
-
+  <meta http-equiv="cache-control" content="no-cache">
   <title>UVMOD RX-TX custom Firmware Generator</title>
 
 <!--  <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
