--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <!--  <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
   <link rel="icon" type="image/png" sizes="196x196" href="img/favicon.png">
   <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="google-site-verification" content="b7xhq3urbbvtTdZmKY306G6Oe6aNJp2fYWTEYmL6hSo">
   <meta name="geo.region" content="TH-90">
   <meta name="geo.placename" content="Hat Yai">
   <meta name="geo.position" content="7.021532;100.502854">
