--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-K78PQKS5');</script>
+})(window,document,'script','dataLayer','GTM-W4XZ6');</script>
 <!-- End Google Tag Manager -->
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="keywords" content="Quansheng, UV, UV-K5, UV-K6, UV-5R, custom, Firmware, Patch, Mod, Mods, Hack, Generator">
-  <meta property="og:title" content="UVMOD RX-TX - Online Quansheng Firmware Patcher">
-  <meta property="og:site_name" content="UVMOD RX-TX">
-  <meta property="og:url" content="https://recon.ddns.net/">
+  <meta name="keywords" content="UV-MOD, uvmod, Quansheng, UV, UV-K5, UV-K6, UV-5R, custom, Firmware, Patch, Mod, Mods, Hack, Generator">
+  <meta property="og:title" content="UV-MOD RX-TX - Online Quansheng Firmware Patcher">
+  <meta property="og:site_name" content="UV-MOD RX-TX">
+  <meta property="og:url" content="http://uv-mod.leechermods.com/">
   <meta property="og:description"
     content="Online patcher generates customizable modded firmware for Quansheng UV series walkie talkies, handheld HAM radios.">
-  <meta name="description" content="Quansheng UV Online Firmware patcher">
+  <meta name="description" content="Quansheng UV-K5, UV-K6 and UV-5R Plus Online Firmware patcher">
   <meta property="og:type" content="website">
   <meta property="og:image" content="img/banner.webp">
   <meta name="author" content="RECON re3con">
   <meta name="publisher" content="admin@leechermods.com">
   <meta name="copyright" content="RECON">
-  <meta name="description" content="UV Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
-  <meta name="keywords" content="quansheng, uv-k5, us-k6, uv-5r, plus, firmware, mod, mods, modification, generator, patch, tool, uvmod">
-  <meta name="page-topic" content="Technical Research HAM Radio Firmware">
+  <meta name="description" content="UV-Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and UV-5R Plus handheld HAM radios">
+  <meta name="keywords" content="Quansheng, uv-k5, uv-k6, uv-5r, plus, firmware, mod, mods, modification, generator, patch, tool, uvmod">
+  <meta name="page-topic" content="Technical Research HAM Radio Firmware Unlock and Reverse engeneering">
   <meta name="page-type" content="Software Download">
   <meta name="audience" content="all">
   <meta http-equiv="content-language" content="en">
@@ -35,15 +35,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="DC.Creator" content="RECON re3con">
   <meta name="DC.Publisher" content="admin@leechermods.com">
   <meta name="DC.Rights" content="RECON">
-  <meta name="DC.Description" content="UV Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
+  <meta name="DC.Description" content="UV-Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
   <meta name="DC.Language" content="en">
   <meta http-equiv="cache-control" content="no-cache">
-  <title>UVMOD RX-TX custom Firmware Generator</title>
+  <title>UV-MOD custom Firmware Patch Generator</title>
 
 <!--  <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
   <link rel="icon" type="image/png" sizes="196x196" href="img/favicon.png">
   <link rel="shortcut icon" href="img/favicon.ico">
-  <meta name="google-site-verification" content="b7xhq3urbbvtTdZmKY306G6Oe6aNJp2fYWTEYmL6hSo">
+ <!-- <meta name="google-site-verification" content="b7xhq3urbbvtTdZmKY306G6Oe6aNJp2fYWTEYmL6hSo"> -->
   <meta name="geo.region" content="TH-90">
   <meta name="geo.placename" content="Hat Yai">
   <meta name="geo.position" content="7.021532;100.502854">
@@ -140,7 +140,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <body id="page-top" class="bg-dark">
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K78PQKS5"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4XZ6"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <!-- Page Wrapper -->
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <h6 class="m-0 font-weight-bold text-primary">Instructions</h6>
                 </div>
                 <div class="card-body">
-                  <h2 class="mb-4">UVMOD RX-TX</h2>
+                  <h2 class="mb-4">UV-MOD RX-TX</h2>
                   <p>This tool lets you create customized firmware Version 2.01.26 for the Quansheng UV-K5, UV-K6, UV-K5(8) and UV-5R
                     Plus handheld radios. It spoof the fw version number (with *, 2, 3, 4) to make it flashable on all these walkie talkies. 
                     To flash the firmware, you need a compatible programming cable and the
