--- a/index.html
+++ b/index.html
@@ -420,5 +420,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 </body>
-This UVmod RX-TX is based on whoismatt's uvmod.
+This UV-Mod RX-TX is based on whoismatt's uvmod.
 </html>
