--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="author" content="RECON re3con">
     <meta name="publisher" content="admin@leechermods.com">
     <meta name="copyright" content="RECON">
-    <meta name="description" content="UV Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
+    <meta name="description" content="UV-Mod is a online custom firmware mod generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
     <meta name="keywords" content="quansheng, uv-k5, us-k6, uv-5r, plus, firmware, mod, mods, modification, generator, patch, tool, uvmod">
     <meta name="page-topic" content="Research technical education HAM radio">
     <meta name="page-type" content="Software Download">
@@ -18,7 +18,7 @@
     <meta name="DC.Creator" content="RECON re3con">
     <meta name="DC.Publisher" content="admin@leechermods.com">
     <meta name="DC.Rights" content="RECON">
-    <meta name="DC.Description" content="UV Mod is an online custom firmware mods generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
+    <meta name="DC.Description" content="UV-Mod is an online custom firmware mods generator for Quansheng UV-K5, K6 and R5 Plus handheld HAM radios">
     <meta name="DC.Language" content="en">
 
     <title>Redirecting</title>
