--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="7; url='https://recon.ddns.net'">
+    <meta http-equiv="refresh" content="7; url='http://uv-mod.leechermods.com'">
     <meta name="author" content="RECON re3con">
     <meta name="publisher" content="admin@leechermods.com">
     <meta name="copyright" content="RECON">
