--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 id="logo" class="h3 mb-0 text-white" style="text-shadow: 0px 0px 5px #ffffffa6; font-size: 3em;">UVMOD RX-TX
+            <h1 id="logo" class="h3 mb-0 text-white" style="text-shadow: 0px 0px 5px #ffffffa6; font-size: 3em;">UV-MOD Firmware Mod
             </h1>
             <button class="d-none d-sm-inline-block btn btn-sm btn-light shadow-lg" type="button" data-toggle="collapse"
               data-target="#instructions">&nbsp;Show Instructions&nbsp;</button>
@@ -188,7 +188,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   </ol>
 
                   <h3 class="mt-4">Flashing</h3>
-                  <p>If you use Windows, you can use the official updater tool. You can download it directly from UVMOD
+                  <p>If you use Windows, you can use the official updater tool. You can download it directly from UV-MOD
                     using the link in the console window.</p>
                   <ol>
                     <li>Connect the programming cable to your computer and ensure the proper drivers are installed. In
